<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/customAddTaskBottomSheetDialogId"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_top_right_and_left_round_background"
    android:orientation="vertical"
    android:padding="10dp">


    <TextView
        android:id="@+id/customAddItemBottomSheetDialogTitleTextViewId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/custom_add_item_bottom_sheet_dialog_title_text_view"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/custom_primary_dark_line" />

    <EditText
        android:id="@+id/customAddItemBottomSheetDialogTypeItemNameEditTextId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_accent_rectangle_border"
        android:hint="@string/custom_add_item_bottom_sheet_dialog_item_name_edit_text"
        android:padding="10dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/customAddItemBottomSheetDialogTypeItemAmountEditTextId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_accent_rectangle_border"
        android:hint="@string/custom_add_item_bottom_sheet_dialog_item_amount_edit_text"
        android:inputType="numberDecimal"
        android:maxLength="16"
        android:padding="10dp"
        android:textSize="20sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/custom_primary_dark_line" />

    <RadioGroup
        android:id="@+id/customAddItemBottomSheetDialogRadioGroupId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/customAddItemBottomSheetDialogReceivedRadioButtonId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/custom_add_item_bottom_sheet_dialog_received_radio_button"
            android:textColor="@color/green" />

        <RadioButton
            android:id="@+id/customAddItemBottomSheetDialogSpentRadioButtonId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/custom_add_item_bottom_sheet_dialog_spent_radio_button"
            android:textColor="@color/red" />
    </RadioGroup>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/custom_primary_dark_line" />

    <Button
        android:id="@+id/customAddItemBottomSheetDialogAddButtonId"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/custom_button_background"
        android:text="@string/custom_add_item_bottom_sheet_dialog_add_item_button" />
</LinearLayout>