<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/customRenameDialogMainUiRelativeLayoutId"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:background="@drawable/custom_dotted_border"
    android:padding="20dp">

    <TextView
        android:id="@+id/customRenameDialogTitleTextViewId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/custom_rename_dialog_rename_text_view"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/customRenameDialogTypeNameEditTextId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/customRenameDialogTitleTextViewId"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:hint="@string/custom_rename_dialog_type_name_edit_text"
        android:textSize="20sp" />

    <Button
        android:id="@+id/customRenameDialogSubmitButtonId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/customRenameDialogTypeNameEditTextId"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:text="@string/custom_rename_dialog_submit_button"
        android:textAllCaps="false" />

</RelativeLayout>