<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="10dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp">

    <RelativeLayout
        android:id="@+id/customAllTransactionsRowMainUIRelativeLayoutId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp">

        <LinearLayout
            android:id="@+id/customAllTransactionsFirstLinearLayoutId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/customAllTransactionsRowSecondLinearLayoutId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/customAllTransactionsRowDateAndTimeTextViewId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="1dp"
                    android:text="@string/custom_entry_row_date_and_time_text_view"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/customAllTransactionsRowItemNameTextViewId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="1dp"
                    android:text="@string/custom_entry_row_item_name_text_view"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/customAllTransactionsRowFromPersonNameTextViewId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="1dp"
                    android:text="@string/custom_all_transactions_row_from_person_name_text_view"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/customAllTransactionsRowMoneyAmountTextViewId"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|right"
                    android:text="@string/custom_all_transactions_row_money_amount_text_view"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/customAllTransactionsRowCurrencySymbolTextViewId"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center"
                    android:text="@string/currency_symbol_text_view"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/customAllTransactionsRowPlusOrMinusSignTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/custom_all_transactions_row_plus_or_minus_sign_text_view"
                    android:textColor="@color/green"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>