<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/plannedActivityMainUIRelativeLayoutId"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PlannedActivity">

    <include
        android:id="@+id/plannedActivityToolbarId"
        layout="@layout/custom_toolbar" />

    <RelativeLayout
        android:id="@+id/plannedActivitySecondRelativeLayoutId"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/plannedActivityToolbarId"
        android:padding="20dp">

        <TextView
            android:id="@+id/plannedActivityPlanTextViewId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/planned_activity_plan_text_view"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/plannedActivityAddPlanHereEditTextId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/plannedActivityPlanTextViewId"
            android:layout_marginTop="5dp"
            android:background="@drawable/custom_blue_rectangle_border"
            android:drawableStart="@drawable/notes"
            android:drawablePadding="5dp"
            android:hint="@string/planned_activity_type_plan_here_edit_text"
            android:padding="10dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/plannedActivityDateTextViewId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/plannedActivityAddPlanHereEditTextId"
            android:layout_marginTop="5dp"
            android:text="@string/planned_activity_date_text_view"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/plannedActivityPickDateTextViewId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/plannedActivityDateTextViewId"
            android:layout_marginTop="5dp"
            android:background="@drawable/custom_blue_rectangle_border"
            android:drawableStart="@drawable/ic_baseline_date_pick_24"
            android:drawablePadding="5dp"
            android:hint="@string/planned_activity_pick_date_text_view"
            android:padding="10dp"
            android:textSize="20sp" />

        <Button
            android:id="@+id/plannedActivityAddPlanButtonId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/plannedActivityPickDateTextViewId"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_button_background"
            android:text="@string/planned_activity_add_plan_button"
            android:textSize="30sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/plannedActivityRecyclerViewId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/plannedActivityAddPlanButtonId"
            android:layout_marginTop="20dp" />
    </RelativeLayout>
</RelativeLayout>